# terradle-solver

./: Cargo.toml  README.md  gen-openers.sh  openers.txt  openers_scored.txt  terradle-solver
src/: data.rs  error.rs  main.rs
