[package]
name = "terradle-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["native-tls", "json"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
tokio = { version = "1.43.0", default-features = false, features = ["rt", "macros", "sync"] }
